--- a/main.html
+++ b/main.html
@@ -8,6 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="control">
+	<button id="id=load_prev" disabled>Load Prev</button>
+	<div class="page">
+
+	</div>
+	<button id="load_next" >Load Next</button>
+	</div>
+	<div class="errorDisp">
+		<ul id="errorDisp">
+
+		</ul>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
