--- a/main.html
+++ b/main.html
@@ -9,11 +9,11 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div class="control">
-	<button id="id=load_prev" disabled>Load Prev</button>
+	<button id="id=load_prev" onclick="loadPrev()" >Load Prev</button>
 	<div class="page">
 
 	</div>
-	<button id="load_next" >Load Next</button>
+	<button id="load_next" onclick="loadNext()" >Load Next</button>
 	</div>
 	<div class="errorDisp">
 		<ul id="errorDisp">
